frontend/tests/cases/negative/notInScopeTyConNestedInInstanceHead.gr
data SimpleDT = SDT

interface Simple a where
  simple : a -> a

instance Simple (SimpleDT A) where
  simple x = x
